# opengateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
adr/: 001-api-key-format.md  002-mojo-api-surface.md
docs/: architecture.md  mojo-python-ai-gateway.md  release-process.md
opengateway/: auth.py  config.py  keys.py  main.py  router.py
opengateway/mojo/: __init__.mojo  bridge.mojo  main.mojo  router.mojo  test_router.mojo
opengateway/mojo_bridge/: __init__.py  auth.py  chat.py
opengateway/providers/: __init__.py  base.py  openai.py
tests/: test_mojo_bridge.py  test_proxy.py
