[project]
name = "opengateway"
version = "0.1.1"
description = "Open-source AI gateway — all features free, monetised through managed hosting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "echohello-dev"}]
keywords = ["ai-gateway", "llm-proxy", "openai", "mojo", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.10,<2.11",
    "pydantic-settings>=2.7,<2.8",
    "httpx[http2]>=0.28,<0.29",
    "structlog>=25.1,<26.0",
    "redis>=5.2,<6.0",
    "asyncpg>=0.30,<0.31",
    "prometheus-client>=0.21,<0.22",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<0.26",
    "httpx>=0.28,<0.29",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
    "pre-commit>=4.1,<5.0",
]

[project.scripts]
opengateway = "opengateway.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opengateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["opengateway"]

[tool.ruff.lint.per-file-ignores]
"opengateway/mojo_bridge/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
